# Golfshot_Categoriser

./: .gitignore  README.md  pyproject.toml
DatasetGeneration/: CreateDataSet.py  MergeData.ipynb  MergeMetricsAndVideos.py  MetricsFileRenaming.py  MetricsMerge.py  ProcessRawData.py  README.md  test_video.py
DatasetGeneration/MetricsExploration/: Explore.ipynb
DatasetGeneration/SwingNet/: ExtractFrames.ipynb  ExtractFrames.py  __init__.py  eval.py  model.py  test_video.py
LabelExtraction/: fileRenaming.py  labelExtraction.ipynb  labelExtraction.py  labelProcessing  videoDataTime.py
data/extracted/metrics/: MergedMetrics.csv
