[tool.poetry]
name = "golfshot-categoriser"
version = "0.1.0"
description = "computer vision application for the categorization of golf shot types."
authors = ["Rok Bohinc <rok.bohinc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.12.0"
tensorflow = "^2.15.0.post1"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
