[tool.poetry]
name = "golfshot-categoriser"
version = "0.1.0"
description = "computer vision application for the categorization of golf shot types."
authors = ["Rok Bohinc <rok.bohinc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.1"
tensorflow = "^2.16.1"
tensorflow-metal = "^1.1.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
