[tool.poetry]
name = "golfshot-categoriser"
version = "0.1.0"
description = "computer vision application for the categorization of golf shot types."
authors = ["Rok Bohinc <rok.bohinc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.1"
tensorflow = "^2.16.1"
tensorflow-metal = "^1.1.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
scipy = "^1.12.0"
torch = "^2.2.1"
opencv-python = "^4.9.0.80"
torchvision = "^0.17.1"
moviepy = "^1.0.3"
matplotlib = "^3.8.4"
poetry = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
